--- a/package.json
+++ b/package.json
@@ -20,24 +20,26 @@
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand"
   },
   "dependencies": {
+    "@nestjs/cache-manager": "^3.1.0",
     "@nestjs/common": "^10.3.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.3.0",
     "@nestjs/platform-express": "^10.3.0",
+    "@nestjs/swagger": "^11.2.5",
     "@nestjs/typeorm": "^10.0.0",
     "@stellar/stellar-sdk": "^12.0.0",
-    "@stellar/js-sdk": "^12.0.0",
-    "pg": "^8.10.0",
-    "redis": "^4.6.0",
-    "ioredis": "^5.3.2",
-    "class-validator": "^0.14.0",
+    "cache-manager": "^7.2.8",
     "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
-    "typeorm": "^0.3.17",
+    "ioredis": "^5.3.2",
+    "pg": "^8.10.0",
+    "pino": "^8.16.2",
+    "pino-pretty": "^10.2.3",
+    "redis": "^4.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.8.1",
-    "pino": "^8.16.2",
-    "pino-pretty": "^10.2.3"
+    "typeorm": "^0.3.17"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.3.0",
