--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@nestjs/schedule": "^6.1.0",
     "@nestjs/swagger": "^11.2.5",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.5.0",
     "@nestjs/typeorm": "^10.0.0",
     "@nestjs/websockets": "^11.1.12",
     "@sentry/node": "^10.36.0",
