feat: Implement Horizontal Scaling Architecture (#125)

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@nestjs/websockets": "^11.1.12",
     "@sentry/node": "^10.36.0",
     "@sentry/profiling-node": "^10.36.0",
+    "@socket.io/redis-adapter": "^8.3.0",
     "@stellar/stellar-sdk": "^12.3.0",
     "@types/big.js": "^6.2.2",
     "@types/bull": "^3.15.9",
@@ -53,6 +54,7 @@
     "bull": "^4.16.5",
     "cache-manager": "^7.2.8",
     "cache-manager-redis-store": "^3.0.1",
+    "cache-manager-redis-yet": "^5.1.5",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.8.1",
@@ -86,6 +88,7 @@
     "@types/jest": "^29.5.8",
     "@types/node": "^20.10.5",
     "@types/passport-jwt": "^4.0.1",
+    "@types/socket.io": "^3.0.1",
     "@typescript-eslint/eslint-plugin": "^6.13.2",
     "@typescript-eslint/parser": "^6.13.2",
     "eslint": "^8.55.0",
