--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@stellar/stellar-sdk": "^12.3.0",
     "@types/big.js": "^6.2.2",
     "@types/bull": "^3.15.9",
+    "@types/passport-oauth2": "^1.8.0",
+    "@types/passport-twitter": "^1.0.40",
     "axios": "^1.13.2",
     "big.js": "^7.0.1",
     "bull": "^4.16.5",
@@ -65,6 +67,8 @@
     "nestjs-i18n": "^10.6.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-oauth2": "^1.8.0",
+    "passport-twitter": "^1.0.4",
     "pg": "^8.10.0",
     "pino": "^8.16.2",
     "pino-pretty": "^10.2.3",
