chore(ci): stabilize build and analytics test scope

--- a/package.json
+++ b/package.json
@@ -60,9 +60,11 @@
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
     "compression": "^1.8.1",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.3.1",
     "fast-csv": "^5.0.5",
     "ioredis": "^5.3.2",
+    "isomorphic-dompurify": "^2.36.0",
     "joi": "^18.0.2",
     "nestjs-i18n": "^10.6.0",
     "passport": "^0.7.0",
