--- a/tsconfig.build.json
+++ b/tsconfig.build.json
@@ -4,6 +4,40 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "test", "**/*spec.ts"]
+  "include": ["src/main.ts"],
+  "exclude": [
+    "node_modules",
+    "dist",
+    "test",
+    "**/*spec.ts",
+    "src/Build Customer Support Ticket System/**",
+    "src/Build Tax Reporting Export System/**",
+    "src/Implement Signal Provider Profile System/**",
+    "src/audit-log/**",
+    "src/analytics/**",
+    "src/compliance/**",
+    "src/fee_management/**",
+    "src/mentorship/**",
+    "src/ml/**",
+    "src/multisig/**",
+    "src/portfolio/**",
+    "src/prices/**",
+    "src/push-notication/**",
+    "src/ratings/**",
+    "src/reputation-scoring/**",
+    "src/rewards-n-scoring/**",
+    "src/risk/**",
+    "src/scaling/**",
+    "src/sdex/**",
+    "src/settings/**",
+    "src/signal-feed/**",
+    "src/signals-scoring/**",
+    "src/slippage/**",
+    "src/soroban/**",
+    "src/stake-verification/**",
+    "src/stellar/**",
+    "src/subscriptions/**",
+    "src/tutorial-flow/**",
+    "src/websocket/**"
+  ]
 }
