--- a/.env.example
+++ b/.env.example
@@ -73,3 +73,19 @@ XAI_MODEL=grok-2-1212
 SENTRY_DSN=
 SENTRY_ENVIRONMENT=development
 SENTRY_TRACES_SAMPLE_RATE=0.1
+
+# =================================
+# EMAIL CONFIGURATION
+# =================================
+# Choose provider: sendgrid or ses
+EMAIL_PROVIDER=sendgrid
+
+# SendGrid Configuration
+SENDGRID_API_KEY=your-sendgrid-api-key
+SENDGRID_FROM_EMAIL=noreply@stellarswipe.com
+
+# AWS SES Configuration (if using SES)
+AWS_REGION=us-east-1
+AWS_ACCESS_KEY_ID=your-aws-access-key
+AWS_SECRET_ACCESS_KEY=your-aws-secret-key
+SES_FROM_EMAIL=noreply@stellarswipe.com
